feat: Adicionando google analytics

--- a/index.html
+++ b/index.html
@@ -860,6 +860,16 @@
     })
   </script>
 
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-5Y9N9ZVVEM"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-5Y9N9ZVVEM');
+  </script>
+
 </body>
 
 </html>
